<resources>
    <string name="app_name">Speech</string>
    <string name="train_your_voice_title_text">Train your voice</string>

    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>
    <string name="info">Info</string>
    <string name="info_msg">Are you sure you want to continue?</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="allow_call_permission_msg">For the app to make phone calls for you, allow the permissions</string>
    <string name="call_permission_denied">Permission denied to allow the app make calls, please allow</string>
    <string name="call_permission_never_ask">To use this feature, allow the permissions in settings</string>

    <string name="allow_sms_permission_msg">For the app to make send sms for you, allow the permissions</string>
    <string name="sms_permission_denied">Permission denied to allow the app send sms, please allow</string>
    <string name="sms_permission_never_ask">To use this feature, allow the permissions in settings</string>


    <string name="allow_recognizer_permission_msg">For the app to recognize your voice and store metadata, allow the permissions</string>
    <string name="recognizer_permission_denied">Permission denied to allow the app to recognize your voice and store metadata, please allow</string>
    <string name="recognizer_permission_never_ask">To use this feature, allow the permissions in settings</string>


    <string name="error_occurred">An error occurred, please try again</string>
    <string name="ruth">Ruth</string>
    <string name="please_train_your_voice_in_the_next_screen">Please train your voice in the next screen</string>
    <string name="proceed">proceed</string>
    <string name="choose_action">Choose an action</string>
    <string name="send_an_sms">Send an SMS</string>
    <string name="sms_icon">SMS Icon</string>
    <string name="make_a_call">Make a call</string>
    <string name="voice_icon">Voice Icon</string>
    <string name="voice_training_complete">Voice training complete…</string>
    <string name="speech_ended">Speech ended</string>
    <string name="speech_started">Speech Started</string>
    <string name="word_guide">WORD GUIDE</string>
    <string name="english_words">English word</string>
    <string name="igbo_words">Igbo word</string>
    <string name="igbo_phones">Igbo Phone</string>
    <string name="learn_to_pronounce_the_igbo_words">Learn to pronounce the words</string>
    <string name="dismiss">Dismiss</string>


    <string name="nnoo">NNOO</string>
    <string name="nnoo_eng">HELLO</string>
    <string name="nnoo_phone">N AO</string>


    <string name="abuo">ABUO</string>
    <string name="abuo_eng">TWO</string>
    <string name="abuo_phone">AA B AO</string>


    <string name="ato">ATO</string>
    <string name="ato_eng">THREE</string>
    <string name="ato_phone">AA T AO</string>

    <string name="daalu">DAALU</string>
    <string name="daalu_eng">THANK YOU</string>
    <string name="daalu_phone">D AA L UW</string>


    <string name="kwusi">KWUSI</string>
    <string name="kwusi_eng">STOP</string>
    <string name="kwusi_phone">K W UW S IY</string>
    <string name="say">Say %s</string>
    <string name="two">Two</string>
    <string name="three">Three</string>

</resources>
