<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/word_guide"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:visibility="gone"
            android:padding="8dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_cancel"/>

    </LinearLayout>



    <TextView
        android:id="@+id/text_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/learn_to_pronounce_the_igbo_words"
        android:textAppearance="?android:textAppearanceMedium" />


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow android:id="@+id/header">

                    <TextView
                        android:id="@+id/english"
                        style="@style/TableTextViewStyle.Header"
                        android:text="@string/english_words" />

                    <TextView
                        android:id="@+id/igbo"
                        style="@style/TableTextViewStyle.Header"
                        android:text="@string/igbo_words" />

                    <TextView
                        android:id="@+id/phones"
                        style="@style/TableTextViewStyle.Header"
                        android:text="@string/igbo_phones" />

                </TableRow>


            </TableLayout>

        </ScrollView>


    </HorizontalScrollView>
</LinearLayout>
